--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,9 @@ body {
   height: 59px;
   box-shadow: 2px 2px 10px hsl(0, 36%, 70%);
 }
+.btn:active {
+  background: linear-gradient(135deg, #fad6d6, #f1a2a2);
+}
 
 .error {
   position: absolute;
