--- a/sass/abstracts/_colors.sass
+++ b/sass/abstracts/_colors.sass
@@ -2,5 +2,10 @@ $desat-red: hsl(0, 36%, 70%)
 $soft-red: hsl(0, 93%, 68%)
 $dark-grayish-red: hsl(0, 6%, 24%)
 
+$grad-1-1: hsl(0, 0%, 100%)
+$grad-1-2: hsl(0, 100%, 98%)
+$grad-2-1: hsl(0, 80%, 86%)
+$grad-2-2: hsl(0, 74%, 74%)
+
 $gradient1: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%))
 $gradient2: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%))
