--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,7 @@ body {
     font-size: 1.2em;
     line-height: 2.2em;
     margin-top: 3em;
+    margin-bottom: 0.8em;
   }
   .description {
     margin: auto;
