--- a/sass/layout/_mobile.sass
+++ b/sass/layout/_mobile.sass
@@ -23,6 +23,7 @@
         font-size: 1.2em
         line-height: 2.2em
         margin-top: 3em
+        margin-bottom: .8em
     .description
         margin: auto
         padding: 0 2em 2em
