--- a/sass/layout/_mobile.sass
+++ b/sass/layout/_mobile.sass
@@ -9,11 +9,11 @@
         padding: 0
     .logo
         text-align: left
-        margin: 2em
+        margin: 0 0 2em 
         img
             width: 35%
     .content
-        padding: 0
+        padding: 2em 0
     .hero
         display: none
     .hero-mobile
