--- a/sass/layout/_desktop.sass
+++ b/sass/layout/_desktop.sass
@@ -1,4 +1,5 @@
 .container
+    background: url("../images/bg-pattern-desktop.svg") no-repeat
     display: grid
     grid-template-columns: 1.35fr 1fr
     max-width: 1440px
