--- a/sass/layout/_mobile.sass
+++ b/sass/layout/_mobile.sass
@@ -9,7 +9,7 @@
         padding: 0
     .logo
         text-align: left
-        margin: 0 0 2em 
+        margin: 0 2em 2em 
         img
             width: 35%
     .content
